template edit profile, create - edit retailer done

--- a/src/app/main/toolbar/toolbar.component.html
+++ b/src/app/main/toolbar/toolbar.component.html
@@ -44,6 +44,11 @@
           <span>Inbox</span>
         </button> -->
 
+        <button mat-menu-item class="" [routerLink]="['/my-profile']">
+          <mat-icon>person</mat-icon>
+          <span>Profil Saya</span>
+        </button>
+
         <button mat-menu-item (click)="logout()">
           <mat-icon>exit_to_app</mat-icon>
           <span>Keluar</span>
