--- a/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
+++ b/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
@@ -3,7 +3,7 @@
     <page-content-header [contentTitle]="'Retailer Detail'">
     </page-content-header>
     <!-- / HEADER -->
-    <div class="content p-24" *ngIf="!onLoad">
+    <div class="content p-24">
       <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
   
         <form [formGroup]="formRetailer">
