--- a/src/app/pages/settings/role/edit/role-edit.component.html
+++ b/src/app/pages/settings/role/edit/role-edit.component.html
@@ -1,3 +1,105 @@
-<p>
-  role-edit works!
-</p>
+<div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
+  <!-- HEADER -->
+  <page-content-header [contentTitle]="'Ubah Tingkatan Akses'">
+  </page-content-header>
+
+  <div class="content p-24" *ngIf="!onLoad">
+    <div class="ayo-main-wrapper mat-bg-white">
+      <form autocomplete="off" [formGroup]="formRolesGroup">
+        <div fxLayout="row" class="px-16 pt-24 pb-8" fxLayoutAlign="start center">
+          <mat-form-field class="is-light form-primary" fxFlex="50">
+            <input matInput type="text" formControlName="name" placeholder="Nama Tingkatan Akses">
+            <mat-error *ngIf="formRolesError.name.required">
+              Nama Tingkatan Akses harus diisi
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div fxLayout="row wrap" fxLayout.lt-md="column" class="pb-16 px-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+
+          <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-select placeholder="National" formControlName="national">
+              <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="formRolesGroup.controls['national'].hasError('required') && formRolesGroup.controls['national'].touched">
+              National harus diisi
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-select placeholder="Zone" formControlName="zone" (selectionChange)="getAudienceArea('region', formRolesGroup.get('zone').value)">
+              <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="formRolesGroup.controls['zone'].hasError('required') && formRolesGroup.controls['zone'].touched">
+              Zone harus diisi
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-select placeholder="Regional" formControlName="region" (selectionChange)="getAudienceArea('area', formRolesGroup.get('region').value)">
+              <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="formRolesGroup.controls['region'].hasError('required') && formRolesGroup.controls['region'].touched">
+              Regional harus diisi
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-select placeholder="Area" formControlName="area" (selectionChange)="getAudienceArea('salespoint', formRolesGroup.get('area').value)">
+              <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="formRolesGroup.controls['area'].hasError('required') && formRolesGroup.controls['area'].touched">
+              Area harus diisi
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-select placeholder="Salespoint" formControlName="salespoint" (selectionChange)="getAudienceArea('district', formRolesGroup.get('salespoint').value)">
+              <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="formRolesGroup.controls['salespoint'].hasError('required') && formRolesGroup.controls['salespoint'].touched">
+              Salespoint harus diisi
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-select placeholder="District" formControlName="district" (selectionChange)="getAudienceArea('territory', formRolesGroup.get('district').value)">
+              <mat-option *ngFor="let item of list['district']" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="formRolesGroup.controls['district'].hasError('required') && formRolesGroup.controls['district'].touched">
+              Distrik harus diisi
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-select placeholder="Territory" formControlName="territory">
+              <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="formRolesGroup.controls['territory'].hasError('required') && formRolesGroup.controls['territory'].touched">
+              Territori harus diisi
+            </mat-error>
+          </mat-form-field>
+        </div>
+      </form>
+      <mat-divider></mat-divider>
+      <div class="ayo-content-middle pb-48">
+
+        <div *ngFor="let role of roles;">
+          <div class="faq" fxLayout="row wrap">
+            <div class="title" fxFlex="100">{{role.nama | toCapitalize}}</div>
+
+            <div class="item" fxFlex="100" fxFlex.gt-xs="30" *ngFor="let items of role.menu; let i = index;" [ngClass]="i%3 !== 2 ? 'line' : ''">
+              <div class="question">{{items.nama | toCapitalize}}</div>
+              <div class="answer">
+                <div fxLayout="row wrap" fxLayoutAlign="start center">
+                  <div fxFlex="25" *ngFor="let item of items.value">
+                    <div class="access-name">{{item.nama | toCapitalize}}</div>
+                    <mat-slide-toggle class="example-margin" [color]="'primary'" [(ngModel)]="item.status"></mat-slide-toggle>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="confirm pl-16 pt-8 pb-24" fxLayout="row">
+        <button mat-raised-button type="password" type="button" class="confirmation-button" fxFlex="25" (click)="submit()">
+          SIMPAN
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
