--- a/src/app/pages/user-management/wholesaler/create/wholesaler-create.component.html
+++ b/src/app/pages/user-management/wholesaler/create/wholesaler-create.component.html
@@ -114,8 +114,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="Zone" formControlName="zone" (selectionChange)="getAudienceArea('region', verticalStepperStep3.get('zone').value)">
-                  <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name === 'all' ? 'Semua
-                    Zona':item.name}}</mat-option>
+                  <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="verticalStepperStep3.controls['zone'].hasError('required') && verticalStepperStep3.controls['zone'].touched">
                   Zone harus diisi
@@ -123,10 +122,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="Regional" formControlName="region" (selectionChange)="getAudienceArea('area', verticalStepperStep3.get('region').value)">
-                  <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name === 'all' ? 'Semua
-                    Regional'
-                    :
-                    item.name}}</mat-option>
+                  <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="verticalStepperStep3.controls['region'].hasError('required') && verticalStepperStep3.controls['region'].touched">
                   Regional harus diisi
@@ -134,9 +130,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="Area" formControlName="area" (selectionChange)="getAudienceArea('salespoint', verticalStepperStep3.get('area').value)">
-                  <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name === 'all' ? 'Semua Area'
-                    :
-                    item.name}}</mat-option>
+                  <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="verticalStepperStep3.controls['area'].hasError('required') && verticalStepperStep3.controls['area'].touched">
                   Area harus diisi
@@ -144,10 +138,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="Salespoint" formControlName="salespoint" (selectionChange)="getAudienceArea('district', verticalStepperStep3.get('salespoint').value)">
-                  <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name === 'all' ? 'Semua
-                    Salespoint'
-                    :
-                    item.name}}</mat-option>
+                  <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="verticalStepperStep3.controls['salespoint'].hasError('required') && verticalStepperStep3.controls['salespoint'].touched">
                   Salespoint harus diisi
@@ -155,10 +146,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="District" formControlName="district" (selectionChange)="getAudienceArea('territory', verticalStepperStep3.get('district').value)">
-                  <mat-option *ngFor="let item of list['district']" [value]="item.id">{{item.name === 'all' ? 'Semua
-                    District'
-                    :
-                    item.name}}</mat-option>
+                  <mat-option *ngFor="let item of list['district']" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="verticalStepperStep3.controls['district'].hasError('required') && verticalStepperStep3.controls['district'].touched">
                   Distrik harus diisi
@@ -166,10 +154,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="Territory" formControlName="territory">
-                  <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name === 'all' ? 'Semua
-                    Territori'
-                    :
-                    item.name}}</mat-option>
+                  <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="verticalStepperStep3.controls['territory'].hasError('required') && verticalStepperStep3.controls['territory'].touched">
                   Territori harus diisi
