--- a/src/app/pages/settings/change-password/index/change-password-index.component.html
+++ b/src/app/pages/settings/change-password/index/change-password-index.component.html
@@ -1,3 +1,49 @@
-<p>
-  change-password-index works!
-</p>
+<div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
+  <!-- HEADER -->
+  <page-content-header [contentTitle]="'Ubah Kata Sandi'">
+
+  </page-content-header>
+  <!-- / HEADER -->
+  <div class="content p-24">
+    <form [formGroup]="changePassword" autocomplete="off">
+      <div class="ayo-main-wrapper mat-bg-white">
+        <div fxLayout="row" class="pb-16" fxLayoutAlign="start center">
+          <h2 class="">Ubah Kata Sandi</h2>
+        </div>
+        <div class="ayo-content-middle pb-48">
+
+          <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
+            <mat-form-field fxFlex="100" class="is-light form-primary">
+              <input matInput type="password" formControlName="old_password" placeholder="Kata Sandi Sekarang">
+              <mat-error *ngIf="changePassword.controls['old_password'].hasError('required') && changePassword.controls['old_password'].touched">
+                Kata Sandi Sekarang harus diisi
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
+            <mat-form-field fxFlex="100" class="is-light form-primary">
+              <input matInput type="password" formControlName="password" placeholder="Kata Sandi Baru">
+              <mat-error *ngIf="changePassword.controls['password'].hasError('required') && changePassword.controls['password'].touched">
+                Kata Sandi Baru harus diisi
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
+            <mat-form-field fxFlex="100" class="is-light form-primary">
+              <input matInput type="password" formControlName="password_confirmation" placeholder="Konfirmasi Kata Sandi Baru">
+              <mat-error *ngIf="changePassword.controls['password_confirmation'].hasError('required') && changePassword.controls['password_confirmation'].touched">
+                Konfirmasi Kata Sandi Baru harus diisi
+              </mat-error>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="confirm pt-8 pb-24" fxLayout="row">
+          <button mat-raised-button type="password" type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
+            SIMPAN
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
