--- a/src/app/pages/user-management/retailer/index/retailer-index.component.html
+++ b/src/app/pages/user-management/retailer/index/retailer-index.component.html
@@ -1,33 +1,32 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
-    <!-- HEADER -->
-    <page-content-header [contentTitle]="'Daftar Retailer'">
-      <div class="button-row" fxLayout="row">
-        <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" [routerLink]="['/user-management','retailer','create']">
-          <mat-icon>add</mat-icon>BUAT
-        </button>
-        <!-- <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" class="is-danger">HAPUS</button> -->
-      </div>
-    </page-content-header>
-    <!-- / HEADER -->
-  
-    <div class="content p-24" *ngIf="!onLoad">
-      <div class="table-wrapper">
-        <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-          <h2 class="pl-8">Daftar Retailer</h2>
-          <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
-            <mat-icon>search</mat-icon>
-            <mat-form-field class="is-light tab-search">
-              <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
-            </mat-form-field>
-          </div>
+  <!-- HEADER -->
+  <page-content-header [contentTitle]="'Daftar Retailer'">
+    <div class="button-row" fxLayout="row">
+      <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" [routerLink]="['/user-management','retailer','create']">
+        <mat-icon>add</mat-icon>BUAT
+      </button>
+      <!-- <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" class="is-danger">HAPUS</button> -->
+    </div>
+  </page-content-header>
+  <!-- / HEADER -->
+
+  <div class="content p-24" *ngIf="!onLoad">
+    <div class="table-wrapper">
+      <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
+        <h2 class="pl-8">Daftar Retailer</h2>
+        <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
+          <mat-icon>search</mat-icon>
+          <mat-form-field class="is-light tab-search">
+            <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
+          </mat-form-field>
         </div>
-        <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
-          [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable"
-          [selectionType]="'checkbox'" [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true"
-          [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)" [sorts]="[{prop: 'name', dir: 'asc'}]"
-          (select)="onSelect($event)">
-  
-          <!-- <ngx-datatable-column [width]="48" [canAutoResize]="false" [sortable]="true">
+      </div>
+      <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
+        [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable"
+        [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
+        (page)="setPage($event)" (sort)="onSort($event)" [sorts]="[{prop: 'name', dir: 'asc'}]" (select)="onSelect($event)">
+
+        <!-- <ngx-datatable-column [width]="48" [canAutoResize]="false" [sortable]="true">
             <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
               let-selectFn="selectFn">
               <mat-checkbox [checked]="allRowsSelected"></mat-checkbox>
@@ -37,41 +36,41 @@
               <mat-checkbox [checked]="isSelected"></mat-checkbox>
             </ng-template>
           </ngx-datatable-column> -->
-  
-          <ngx-datatable-column name="Nama Toko" prop="name">
-            <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-              <a class="direct-edit" (click)="directEdit(row)">{{row.name}} </a>
-            </ng-template>
-          </ngx-datatable-column>
-  
-          <ngx-datatable-column name="Nama Pemilik" prop="owner">
-            <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-              <a class="direct-edit" (click)="directEdit(row)">{{row.owner}} </a>
-            </ng-template>
-          </ngx-datatable-column>
-  
-          <ngx-datatable-column name="Kode iSMS" prop="code" summary-template="activeCell"></ngx-datatable-column>
-          <ngx-datatable-column name="Classification" prop="classification" summary-template="activeCell"></ngx-datatable-column>
-  
-          <ngx-datatable-column [width]="100" name="Status" prop="active_status">
-              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-                <div class="name-container">
-                  <p class="status text-truncate h6 p-4" style="min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
-                    [ngClass]="row.status == 'active' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
-                      {{ row.status }}
-                    </p>
-                </div>
-            </ng-template>
-          </ngx-datatable-column>
-  
-          <!-- <ngx-datatable-column name="Terkahir Masuk" prop="last_login">
+
+        <ngx-datatable-column name="Nama Toko" prop="name">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <a class="direct-edit" (click)="directEdit(row)">{{row.name}} </a>
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="Nama Pemilik" prop="owner">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <a class="direct-edit" (click)="directEdit(row)">{{row.owner}} </a>
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="Kode Agen" prop="code" summary-template="activeCell"></ngx-datatable-column>
+        <ngx-datatable-column name="Classification" prop="classification" summary-template="activeCell"></ngx-datatable-column>
+
+        <ngx-datatable-column [width]="100" name="Status" prop="active_status">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <div class="name-container">
+              <p class="status text-truncate h6 p-4" style="min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
+                [ngClass]="row.status == 'active' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
+                {{ row.status }}
+              </p>
+            </div>
+          </ng-template>
+        </ngx-datatable-column>
+
+        <!-- <ngx-datatable-column name="Terkahir Masuk" prop="last_login">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               {{row.last_login | date:'dd/MM/yyyy HH:mm'}}
             </ng-template>
           </ngx-datatable-column> -->
-  
-          <!-- disable delete ws -->
-          <!-- <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
+
+        <!-- disable delete ws -->
+        <!-- <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
               <div class="button-row pl-8">
                 <button mat-icon-button color="primary" (click)="deleteWholesaler(row.id)">
@@ -80,8 +79,7 @@
               </div>
             </ng-template>
           </ngx-datatable-column> -->
-        </ngx-datatable>
-      </div>
+      </ngx-datatable>
     </div>
   </div>
-  
+</div>
