--- a/src/app/pages/dte/schedule-program/edit/schedule-program-edit.component.html
+++ b/src/app/pages/dte/schedule-program/edit/schedule-program-edit.component.html
@@ -9,6 +9,9 @@
         <div fxLayout="row" fxLayoutAlign="space-between center">
           <h2 class="">Detil Pengatur Jadwal Trade Program</h2>
         </div>
+        <div class="message-box warning">
+          This is a warning message box!
+        </div>
         <div class="ayo-middle py-24" fxLayout="column">
           <div fxLayout="row">
             <mat-form-field fxFlex="45" class="is-light form-primary">
@@ -84,7 +87,7 @@
           fxLayout="row" fxLayoutGap="20px">
           <!-- <button mat-raised-button type="button" class="confirmation-button" (click)="submit()" fxFlex="20">
             REJECT
-          </button> --> 
+          </button> -->
 
           <button mat-raised-button type="button" class="confirmation-button" (click)="submit()" fxFlex="20">
             SETUJUI
