--- a/src/app/pages/user-management/field-force/edit/field-force-edit.component.html
+++ b/src/app/pages/user-management/field-force/edit/field-force-edit.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Admin Detail'">
+  <page-content-header [contentTitle]="'Field Force Detail'">
   </page-content-header>
   <!-- / HEADER -->
   <div class="content p-24" *ngIf="!onLoad">
@@ -90,6 +90,10 @@
               <mat-form-field fxFlex="100" class="is-light">
                 <input matInput placeholder="Konfirmasi Kata Sandi" type="password" formControlName="confirmation_password">
               </mat-form-field> -->
+
+          <div fxLayout="row" class="pt-16" fxLayoutAlign="start center">
+            <h2 class="">Ubah Kata Sandi Baru</h2>
+          </div>
 
           <div fxLayout="row">
             <mat-form-field fxFlex="100" class="is-light form-primary">
