--- a/src/app/pages/newsfeed-management/category/index/category-index.component.html
+++ b/src/app/pages/newsfeed-management/category/index/category-index.component.html
@@ -1,3 +1,65 @@
-<p>
-  category-index works!
-</p>
+<div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
+    <!-- HEADER -->
+    <page-content-header [contentTitle]="'Kategori Newsfeed'">
+        <div class="button-row" fxLayout="row">
+          <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" [routerLink]="['/newsfeed-management','category','create']">
+            <mat-icon>add</mat-icon>TAMBAH
+          </button>
+          <!-- <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" class="is-danger">HAPUS</button> -->
+        </div>
+    </page-content-header>
+    <!-- / HEADER -->
+    <div class="content p-24" *ngIf="!onLoad">
+      <div class="table-wrapper">
+        <form [formGroup]="formFilter" autoComplete="off">
+          <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
+            <h2 class="pl-8">Kategori Newsfeed</h2>
+            <!-- <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
+              <mat-icon>search</mat-icon>
+              <mat-form-field autoComplete="off" class="is-light tab-search">
+                <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)">
+              </mat-form-field>
+            </div> -->
+          </div>
+        </form>
+        <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows" [loadingIndicator]="loadingIndicator"
+          [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true"
+          [reorderable]="reorderable" [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true"
+          [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)" [sorts]="[{prop: 'name', dir: 'asc'}]">
+  
+          <ngx-datatable-column name="Kategori" [width]="240" prop="name">
+            <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+              <div class="name-container">
+                <a class="direct-edit" (click)="directDetail(row)">{{row.name}}</a>
+              </div>
+            </ng-template>
+          </ngx-datatable-column>
+  
+          <ngx-datatable-column [width]="68" name="Status" headerClass="textright" [sortable]="false">
+            <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
+              <div class="name-container pl-12">
+                <mat-icon *ngIf="row.status === 'active'" class="active-icon mat-green-600-bg s-18">check</mat-icon>
+                <mat-icon *ngIf="row.status === 'inactive'" class="active-icon mat-red-500-bg s-18">close</mat-icon>
+              </div>
+            </ng-template>
+          </ngx-datatable-column>
+
+          <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
+            <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
+              <div class="button-row pl-8">
+                <!-- <button mat-icon-button color="primary" (click)="deleteUser(row.id)">
+                  <mat-icon>delete</mat-icon>
+                </button> -->
+                <button mat-icon-button color="" matTooltip="Ubah" (click)="directDetail(row)">
+                    <mat-icon class="secondary-text">edit</mat-icon>
+                  </button>
+              </div>
+            </ng-template>
+          </ngx-datatable-column>
+
+
+        </ngx-datatable>
+      </div>
+    </div>
+  </div>
+  
